<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.10">
  <DUT Name="eErrorClearWays" Id="{541fffb7-8b44-45bb-b200-d22fefd5ea0c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE eErrorClearWays :
(
	NO_ACTION:=0,
	RESET := 1,
	IGNORE :=2
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>